Fix wrong margin.

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -264,7 +264,7 @@ body.home .main-container .clients-row li.gallery-item img {
   vertical-align: middle;
 }
 body.home .main-container .blog-row .teasers {
-  margin-top: 70px 0 30px 0;
+  margin: 70px 0 30px 0;
 }
 body.home .main-container .blog-row .list-wrapper .date {
   color: #646464;
