--- a/assets/themes/twitter/sass/pages/_front.scss
+++ b/assets/themes/twitter/sass/pages/_front.scss
@@ -184,7 +184,7 @@ body.home {
     .blog-row {
 
       .teasers {
-        margin-top: 70px 0 30px 0;
+        margin: 70px 0 30px 0;
       }
 
       .list-wrapper {
